# PRISM

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_ablation.py  run_prism.py  setup.py
benchmarks/: run_benchmarks_proper.py  run_foundation_benchmarks.py  run_foundation_benchmarks_cross_system.py  run_geneformer_benchmark.py  run_scgpt_benchmark.py
configs/: cardiac.yaml  cortex.yaml  default.yaml  hsc.yaml  intestine.yaml  lung.yaml  neftel_gbm.yaml  nestorowa.yaml  neural_crest.yaml  oligo.yaml  pancreas.yaml  paul.yaml  sadefeldman.yaml  skin.yaml  thcell.yaml  tirosh_melanoma.yaml
experiments/: run_exp3_sensitivity.py  run_exp4_crossspecies.py  run_exp5_generalization.py  run_exp6_validation.py  run_exp7_trajectory.py  run_exp8_benchmark.py
prism/: __init__.py  api.py  cli.py  config.py
prism/experiments/: __init__.py  ablation.py  baselines.py  benchmarks.py  clonal_validation.py  cross_system.py  sensitivity.py  theory.py
scripts/: compute_extended_metrics.py  download_corpus.py  eval_missing_fm.py  eval_scgpt_pretrained.sh  generate_presentation_figures.py  generate_umap_comparisons.py  preprocess_corpus.py  pretrain_pcp.py  regenerate_umap_labels.py  rerun_groupb_nopretrain.sh  rerun_new4_nopretrain.sh  rerun_tirosh_with_checkpoint.py  resume_pcp.sh  retrain_all_bs256.sh  retrain_then_eval.sh  retrain_with_pretrained.py  retrain_with_pretrained.sh  run_all_evaluations.py  run_hsc_clonal.py  run_missing_fm_benchmarks.sh
tests/: conftest.py  test_api.py  test_config.py  test_dataset.py  test_metrics.py  test_preprocess.py
(+24 files in other folders)
